syntax = "proto3";

package orderapi;

option go_package="./orderapi";

// 定义一个枚举类型来表示订单状态
enum OrderStatus {
    UNPAID = 0; // 未支
    PAID = 1;   // 已支付
    CANCELLED = 2; // 已取消
}

message OrderInfo {
	string OrderId = 1;
	int64 OrderVersion = 2;
	int64 UserId = 3;
	string OrderData = 4;	
	OrderStatus Status = 5;
}

service OrderApi {
	rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){}
	rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse){}
	rpc GetOrder(GetOrderRequest) returns (GetOrderResponse){}
	rpc GenerateUUID (Empty) returns (GenerateUUIDResponse) {}
}


message CreateOrderRequest {
	OrderInfo data = 1;
}

message CreateOrderResponse {
	int64 rowaffectd = 1;
}

message UpdateOrderRequest {
	OrderInfo data = 1;
}

message UpdateOrderResponse {
	int64 rowaffectd = 1;
}

message GetOrderRequest {
	string orderid = 1;	// uuid
}

message GetOrderResponse {
	OrderInfo data = 1;
}

message Empty {}

message GenerateUUIDResponse {
	string uuid=1; 
}